[package]
name = "lendingmanager"
version = "0.1.0"
authors = ["Vera DeFi"]
edition = "2018"
description = "A smart contract to lend non-fungible tokens"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", default-features = false }
ink_metadata = { version = "3.0.0-rc3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", default-features = false }
ink_storage = { version = "3.0.0-rc3", default-features = false }
ink_lang = { version = "3.0.0-rc3", default-features = false }
ink_prelude = { version = "3.0.0-rc3", default-features = false }

scale = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }
erc721 = { version = "0.1.0", path = "../erc721", default-features = false, features = ["ink-as-dependency"] }
erc20= { version = "0.1.0", path = "../erc20", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "lendingmanager"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    "erc721/std",
    "erc20/std",
]
ink-as-dependency = []

[profile.release] 
overflow-checks = false
